<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ChannelDemoActivity!</string>
    <string name="app_name">ChannelDemo</string>
    <string name="login">与百度连接</string>
    <string name="PPTlist">PPT列表</string>
    <string name="fail">失败！！</string>
    <string name="loginback">取消登陆！</string>
    <string name="refresh">列表刷新成功！</string>
    <string name="next">下一页</string>
    <string name="pervious">上一页</string>
    <string name="back">返回</string>
    <string name="slide_control">滑动模式</string>
    <string name="button_control">上一页</string>
	<string name="jump">跳到</string>
</resources>